--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,1 +1,38 @@
-<p>accueil works!</p>
+<main> 
+    <div class="Presentation">
+        <h1>Le Petit Village</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi varius libero magna, at dapibus ante iaculis eu. Phasellus nec luctus risus, eget ullamcorper massa. Nulla interdum ac libero mollis sodales. Praesent commodo augue id est tristique mattis. Nullam tempor dignissim aliquam. Maecenas tincidunt lorem nec dolor egestas, vitae finibus risus molestie. Suspendisse tortor ligula, bibendum condimentum dui ac, eleifend laoreet dui. Sed fermentum quam vel scelerisque tristique. Aliquam lacinia felis a velit lacinia faucibus vitae at turpis. Aenean eu odio eu magna ornare tempus ut eu tortor.</p>
+        <img src="/assets/img/favicon.jpg" alt="favicon">
+    </div>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+    <p>accueil works!</p>
+</main>
