--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,12 @@
-<p>header works!</p>
+<header>
+  <div class="logo">
+    <img src="/assets/img/Logo_au petit village.jpg" alt="Logo">
+  </div>
+  <nav>
+    <ul>
+      <li><a routerLink="/" routerLinkActive="active">Accueil</a></li>
+      <li><a routerLink="/about" routerLinkActive="active">À propos</a></li>
+      <li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
+    </ul>
+  </nav>
+</header>
