--- a/src/app/accueil/accueil.component.css
+++ b/src/app/accueil/accueil.component.css
@@ -15,3 +15,10 @@
   margin: 0;
   object-fit: cover; /* Remplit sans déformer */
 }
+
+.ImgProduit {
+  margin: 10px 0px 0px 10px;
+  width: 150px;
+  height: 150px;
+  border-radius: 30%;
+}
