--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -4,12 +4,31 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi varius libero magna, at dapibus ante iaculis eu. Phasellus nec luctus risus, eget ullamcorper massa. Nulla interdum ac libero mollis sodales. Praesent commodo augue id est tristique mattis. Nullam tempor dignissim aliquam. Maecenas tincidunt lorem nec dolor egestas, vitae finibus risus molestie. Suspendisse tortor ligula, bibendum condimentum dui ac, eleifend laoreet dui. Sed fermentum quam vel scelerisque tristique. Aliquam lacinia felis a velit lacinia faucibus vitae at turpis. Aenean eu odio eu magna ornare tempus ut eu tortor.</p>
         <img src="/assets/img/favicon.jpg" alt="favicon">
     </div>
-    <div *ngFor="let produit of produits | slice:0:4" class="produit">
+    <!-- Menu déroulant pour choisir le tri des produits -->
+    <label for="tri">Trier par :</label>
+    <select id="tri" [(ngModel)]="critereTri" (ngModelChange)="appliquerTriEtPagination()"> <!--[(ngModel)]="critereTri" : Lier la sélection au critère de tri. (ngModelChange)="appliquerTriEtPagination()" : Appliquer le tri et la pagination à chaque changement de critère.-->
+        <option value="nomAsc">Nom (A-Z)</option>
+        <option value="nomDesc">Nom (Z-A)</option>
+        <option value="prixAsc">Prix (croissant)</option>
+        <option value="prixDesc">Prix (décroissant)</option>
+    </select>
+     <!-- Boucle sur les produits affichés -->
+    <div *ngFor="let produit of produitsAffiches | trier: critereTri" class="produit">
         <img class="ImgProduit" [src]="produit.image" [alt]="produit.nom">
-        <h2>{{ produit.nom }}</h2>
-        <p>{{ produit.description }}</p>
-        <p><strong>Prix :</strong> {{ produit.prix | currency:'EUR' }}</p>
-        <a [routerLink]="['/produit', produit.id]">Voir le produit</a>
+        <div class="prouidtInfo">
+            <h2>{{ produit.nom }}</h2>
+            <!-- <p>{{ produit.description }}</p> -->
+            <p><strong>Prix :</strong> {{ produit.prix | currency:'EUR' }}</p>
+            <a [routerLink]="['/produit', produit.id]">Voir plus</a>
+        </div>
     </div>
-    
+    <!-- Pagination : Boutons pour naviguer -->
+    <div class="pagination">
+        <!-- Bouton pour aller à la page précédente (désactivé si on est déjà à la première page) -->
+        <button (click)="changerPage(-1)" [disabled]="pageActuelle === 1">Précédent</button>
+        <!-- Affichage du numéro de page -->
+        <span>Page {{ pageActuelle }} / {{ totalPages }}</span>
+        <!-- Bouton pour aller à la page suivante (désactivé si on est sur la dernière page) -->
+        <button (click)="changerPage(1)" [disabled]="pageActuelle >= (produits.length / articlesParPage)">Suivant</button>
+    </div>
 </main>
