--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -47,3 +47,53 @@ img {
   border-radius: 30%;
   margin: 10px;
 }
+
+/* BOUTON BURGER caché sur grand écran */
+.burger {
+  display: none;
+  font-size: 2em;
+  background: none;
+  border: none;
+  color: #151217;
+  cursor: pointer;
+}
+
+/* RESPONSIVE */
+@media (max-width: 759px) {
+  nav {
+    display: none;
+    position: absolute;
+    top: 100px; /* Sous le header */
+    right: -10px; /* Collé à droite */
+    width: auto; /* 50% de la largeur de l'écran */
+    background-color: #F9D0A3;
+    padding: 10px;
+    margin: 0 10px 10px 0;
+    text-align: center; /* Texte aligné à droite */
+  }
+
+  nav.open {
+    display: block;
+  }
+
+  nav ul {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  nav li {
+    display: block;
+  }
+
+  .burger {
+    display: block;
+    font-size: 2em;
+    background: #151217;
+    border: solid 2px #FDD90B ; 
+    border-radius: 25%;
+    color: #DA001E;
+    cursor: pointer;
+    margin-left: auto; /* Pousse le burger complètement à droite */
+    margin-right: 10px; /* Ajoute un espace à droite */
+  }
+}
