--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,8 +3,8 @@
     <img src="/assets/img/Logo_au petit village.jpg" alt="Logo">
   </div>
   <!-- Bouton burger visible uniquement sur petits écrans -->
-  <button class="burger" (click)="toggleMenu()">☰</button>
-  <nav [class.open]="menuOuvert">
+  <button class="burger" (click)="toggleMenu()"> &#9776; </button>
+  <nav [class.open]="menuOuvert"> <!-- Ajout de la classe open si menuOuvert est vrai  liaison de classe dynamique en Angular-->
     <ul>
       <li><a routerLink="/" routerLinkActive="active">Accueil</a></li>
       <li><a routerLink="/about" routerLinkActive="active">À propos</a></li>
