--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -4,7 +4,7 @@
     padding: 2em;
     background-color: #151217 ;
     border-radius: 10px;
-    border: 0.5em solid #FDD90B ;
+    border: 0.5em solid #F9D0A3 ;
     margin: 2em auto; /* Centré horizontalement */
   }
   
@@ -12,7 +12,7 @@
     display: block;
     margin-top: 1rem;
     font-weight: bold;
-    color: #F9D0A3 ;
+    color: #FDD90B ;
   }
   
   input, textarea {
