--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,4 +6,15 @@
           <li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
         </ul>
     </nav>
+    <div class="social-links">
+      <a href="https://www.facebook.com" target="_blank">
+        <img src="assets/icons/facebook.png" alt="Facebook">
+      </a>
+      <a href="https://twitter.com" target="_blank">
+        <img src="assets/icons/twitter.png" alt="Twitter">
+      </a>
+      <a href="https://www.discord.com" target="_blank">
+        <img src="assets/icons/discord.png" alt="discord">
+      </a>
+    </div>
 </footer>
