--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,8 +1,7 @@
-<main> 
+<main class="Accueil"> 
     <div class="Presentation">
-        <h1>Le Petit Village</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi varius libero magna, at dapibus ante iaculis eu. Phasellus nec luctus risus, eget ullamcorper massa. Nulla interdum ac libero mollis sodales. Praesent commodo augue id est tristique mattis. Nullam tempor dignissim aliquam. Maecenas tincidunt lorem nec dolor egestas, vitae finibus risus molestie. Suspendisse tortor ligula, bibendum condimentum dui ac, eleifend laoreet dui. Sed fermentum quam vel scelerisque tristique. Aliquam lacinia felis a velit lacinia faucibus vitae at turpis. Aenean eu odio eu magna ornare tempus ut eu tortor.</p>
-        <img src="/assets/img/favicon.jpg" alt="favicon">
+        <img src="/assets/img/Logo_au petit village.jpg" alt="logo">
     </div>
     <!-- Menu déroulant pour choisir le tri des produits -->
     <label for="tri">Trier par :</label>
