--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <div class="logo">
-    <a routerLink="/" routerLinkActive="active"><img src="/assets/img/Logo_au petit village.jpg" alt="Logo"></a>
+    <a routerLink="/" routerLinkActive="active"><img src="/assets/img/favicon.jpg" alt="favicon"></a>
   </div>
   <!-- Bouton burger visible uniquement sur petits écrans -->
   <button class="burger" (click)="toggleMenu()"> &#9776; </button>
